# rust_url_shortener

./: Readme.md
.devcontainer/: devcontainer.json
url_shortener/: .gitignore  Cargo.toml
url_shortener/src/: main.rs
