[package]
name = "url_shortener"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.10.2"
dotenvy = "0.15.7"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = "0.8.5"
tokio = { version = "1.45.0", features = ["full"] }
uuid = { version = "1.16.0", features = ["v4"] }
